--- a/MoneyBack/MoneyBack.csproj
+++ b/MoneyBack/MoneyBack.csproj
@@ -132,7 +132,7 @@
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj">
+    <ProjectReference Include="..\C-Common\Common\Common.csproj">
       <Project>{7833de49-4309-4c54-bd72-ea7b9f99f71f}</Project>
       <Name>Common</Name>
     </ProjectReference>
