--- a/Money/App.config
+++ b/Money/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MoneyEntities" connectionString="metadata=res://*/MoneyEntities.csdl|res://*/MoneyEntities.ssdl|res://*/MoneyEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TV3KU0A\MONSTERPC;initial catalog=Money;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MoneyEntities" connectionString="metadata=res://*/MoneyEntities.csdl|res://*/MoneyEntities.ssdl|res://*/MoneyEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DAMIAN-XF\DAMIANSQL;initial catalog=Money;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
