--- a/MoneyBackTests/MoneyBackTests.csproj
+++ b/MoneyBackTests/MoneyBackTests.csproj
@@ -48,10 +48,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommisionCalculatorTests.cs" />
+    <Compile Include="SantanderCommisionCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
