--- a/MoneyBack/MoneyBack.csproj
+++ b/MoneyBack/MoneyBack.csproj
@@ -57,7 +57,6 @@
   <ItemGroup>
     <Compile Include="Bankier\BankierCommon.cs" />
     <Compile Include="Bankier\BankierConnection.cs" />
-    <Compile Include="Bankier\BankierService.cs" />
     <Compile Include="Bankier\IBankierConnection.cs" />
     <Compile Include="Bankier\Models\GetDataResponse.cs" />
     <Compile Include="Bankier\Models\IntervalDetail.cs" />
@@ -96,6 +95,7 @@
       <DependentUpon>MoneyEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rater\RaterService.cs" />
     <Compile Include="Repositories\CompanyRepository.cs" />
     <Compile Include="Repositories\FrontRepository.cs" />
     <Compile Include="Repositories\ICompanyRepository.cs" />
@@ -104,7 +104,9 @@
     <Compile Include="Repositories\MoneyRepositoryBase.cs" />
     <Compile Include="Repositories\TransactionRepository.cs" />
     <Compile Include="Requests\JsonRequest.cs" />
-    <Compile Include="Stooq\StooqService.cs" />
+    <Compile Include="StockPrices\IStockPriceService.cs" />
+    <Compile Include="StockPrices\StockPriceType.cs" />
+    <Compile Include="StockPrices\MarketWatchStockPriceService.cs" />
     <Compile Include="Transaction.cs">
       <DependentUpon>MoneyEntities.tt</DependentUpon>
     </Compile>
